Sync all content

--- a/content/resources/9-22jf06-th.md
+++ b/content/resources/9-22jf06-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: National Institute of Mental Health (U.S.)
-file: /media/courses/9-22j-a-clinical-approach-to-the-human-brain-fall-2006/959ee3e77acf1da6619aea36263b3165_9-22jf06-th.jpg
+file: /courses/9-22j-a-clinical-approach-to-the-human-brain-fall-2006/959ee3e77acf1da6619aea36263b3165_9-22jf06-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Activity in the highlighted areas in the prefrontal cortex may affect the
@@ -15,3 +15,5 @@ resourcetype: Image
 title: Human Brain (thumbnail)
 uid: 959ee3e7-7acf-1da6-619a-ea36263b3165
 ---
+National Institute of Mental Health (U.S.)
+
