Sync all content

--- a/content/resources/9-22jf06-th.md
+++ b/content/resources/9-22jf06-th.md
@@ -10,10 +10,10 @@ image_metadata:
   credit: ''
   image-alt: Image of the brain with key areas highlighted.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Human Brain (thumbnail)
 uid: 959ee3e7-7acf-1da6-619a-ea36263b3165
 ---
 National Institute of Mental Health (U.S.)
-
