--- a/content/resources/9-22jf06.md
+++ b/content/resources/9-22jf06.md
@@ -12,10 +12,10 @@ image_metadata:
   credit: ''
   image-alt: Image of the brain with key areas highlighted.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Human Brain
 uid: 665e69cc-2a76-d951-ecbe-0544dd6c05e3
 ---
 Activity in the highlighted areas in the prefrontal cortex may affect the level of dopamine in the mid-brain, in a finding that has implications for schizophrenia. (Image courtesy of the National Institutes of Mental Health.)
-
