--- a/content/resources/9-22jf06-th.md
+++ b/content/resources/9-22jf06-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: National Institute of Mental Health (U.S.)
 file: /courses/9-22j-a-clinical-approach-to-the-human-brain-fall-2006/959ee3e77acf1da6619aea36263b3165_9-22jf06-th.jpg
+file_size: 7349
 file_type: image/jpeg
 image_metadata:
   caption: Activity in the highlighted areas in the prefrontal cortex may affect the
