--- a/content/resources/9-22jf06.md
+++ b/content/resources/9-22jf06.md
@@ -4,6 +4,7 @@ description: Activity in the highlighted areas in the prefrontal cortex may affe
   the level of dopamine in the mid-brain, in a finding that has implications for schizophrenia.
   (Image courtesy of the National Institutes of Mental Health.)
 file: /courses/9-22j-a-clinical-approach-to-the-human-brain-fall-2006/665e69cc2a76d951ecbe0544dd6c05e3_9-22jf06.jpg
+file_size: 84325
 file_type: image/jpeg
 image_metadata:
   caption: Activity in the highlighted areas in the prefrontal cortex may affect the
