--- a/content/resources/9-22jf06-th.md
+++ b/content/resources/9-22jf06-th.md
@@ -7,7 +7,8 @@ file_type: image/jpeg
 image_metadata:
   caption: Activity in the highlighted areas in the prefrontal cortex may affect the
     level of dopamine in the mid-brain, in a finding that has implications for schizophrenia.
-    (Image courtesy of the [National Institutes of Mental Health](http://www.nimh.nih.gov/).)
+    (Image courtesy of the {{% resource_link "3c50dbb6-eba3-4ab4-8db9-28fdae9b5136"
+    "National Institutes of Mental Health" %}}.)
   credit: ''
   image-alt: Image of the brain with key areas highlighted.
 learning_resource_types: []
